--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>htmlcss-hello</title>
 </head>
 <body>
-    <h1>
-        Hello World!
-    </h1>
+    <h1> Hello World!</h1>
+    <img src="hello.jpeg" alt="">
 </body>
 </html>
